fix code block on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,8 +27,14 @@
   @apply py-5 px-4;
   counter-reset: step;
   counter-increment: step 0;
-  width: 60%;
+  width: 75%;
   border-radius: 0.375rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .astro-code {
+    width: 100%;
+  }
 }
 
 .astro-code .line::before {
